# stereo_arm_track

./: .gitignore  CMakeLists.txt  README.md  run_tracker.sh  run_tracker1.sh  run_tracker2.sh  save_frames.sh
config/: 7L03E0EPAK00002.mvcfg  7L03E0EPAK00002_calibration.txt  7L03E0EPAK00005.mvcfg  7L03E0EPAK00005_calibration.txt  7L03E0EPAK00022.mvcfg  7L03E0EPAK00022_calibration.txt  7L03E0EPAK00026.mvcfg  7L03E0EPAK00026_calibration.txt
data_transport/videos/: 7L03E0EPAK00022.avi
exe/: CMakeLists.txt  compute_extrinsic.cc  main.cc  run_tracker.cc  save_frames.cc  test_bed.cc  test_bed2.cc
src/: CMakeLists.txt  controller.cc  controller.h  frame_grabber.cc  frame_grabber.h  marker.cc  marker.h  marker_detector.cc  marker_detector.h  triangulator.cc  triangulator.h  viewer.cc  viewer.h  visualizer.cc  visualizer.h
stereo_arm_track/: CMakeLists.txt  controller.h  frame_grabber.cc  frame_grabber.h  test_bed.cc
